2007-03-21  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java (testStepSigLongJmp): Added, re: #4016.
	(testStepGoto): Ditto.
	(setUpTest): Added code for above two new tests.
	(assertions): Ditto.

2007-03-21  Tim Moore  <timoore@redhat.com>

	* BreakpointCollection.java: New superclass for breakpoints.
	* LineBreakpoint.java (LineBreakpoint): Use it.
	(addBreakpoint, deleteBreakpoint): Remove.
	* FunctionBreakpoint.java: New class.

2007-03-20  Mike Cvet  <mcvet@redhat.com>

	* StackFrame.java (getLines): Prepend the compilation directory to the
	source file location if the given path is relative, rather than absolute. 
	Fixes #4220.

2007-03-19  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java (assertions): Fixed up a couple assertions.

2007-03-16  Mike Cvet  <mcvet@redhat.com>

	* RunState.java (setRunning): Added.

2007-03-15  Sami Wagiaalla  <swagiaal@redhat.com>

	* StackFactory.java (printStackTrace): new function.

2007-03-15  Mike Cvet  <mcvet@redhat.com>

	* TestStepping.java: Deleted old constants, added new ones.
	(test): Determines which test is running.
	(CFile): Source file path for test program.
	(testRecursiveLineStepping): Removed.
	(testASMStepping): Removed.
	(testLineStepFunctionCall): Added.
	(testLineStepIfStatementPass): Added.
	(testLineStepIfStatementFail): Added.
	(testLineStepFunctionReturn): Added.
	(testASMSingleStep): Added.
	(testASMMultiStep): Added.
	(testASMJump): Added.
	(setUpTest): Re-written.
	(assertions): Added. Cleaner method for making assertions on
	stepping results.
	(AttachedObserver.updateAttached): Delete AttachedObserver from task.
	(AttachedObserver.deletedFrom): Add RunState from here.
	(LockObserver.update): Cleaned up.

2007-03-15  Stan Cox  <scox@redhat.com>

	* StackFrame.java (subprogram): New.
	(getSubprogram): New.
	(setSubprogram): New.
	* LexicalBlock.java:  Moved from frysk.value.
	* Subprogram.java:  Moved from frysk.value.

2007-03-12  Mike Cvet  <mcvet@redhat.com>
