@@ -4,6 +4,10 @@
 	(testStepGoto): Ditto.
 	(setUpTest): Added code for above two new tests.
 	(assertions): Ditto.
+	
+	* TestStepping.java (testStepSigRaise): Added.
+	(setUpTest): Added code for signal raise test.
+	(assertions): Ditto.
 
 2007-03-21  Tim Moore  <timoore@redhat.com>
 
